Fix stray spacing

--- a/css/main.css
+++ b/css/main.css
@@ -49,13 +49,13 @@ hgroup {
 }
 
 p {
-  margin: 0 auto: 0 0;
+  margin: 0;
   max-width: 24em;
 }
 
-a  {
+a {
   background-color: #444;
   color: #fff;
   text-decoration: none;
-  padding: : .5rem 1rem .6rem;
+  padding: .5rem 1rem .6rem;
 }
